[package]
name = "wasm-chip8"
version = "0.1.0"
authors = ["Aidan Beggs <nadiasggeb001@gmail.com>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
