[package]
name = "wasm-chip8"
version = "0.1.0"
authors = ["Aidan Beggs <nadiasggeb001@gmail.com>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.50", features = ["console"] }
